# gwtolatex

./: .gitignore  Chausey-inputs  Generic-inputs  Gw2LaTeX-env.tex  Makefile  Makefile.config  README.txt  chausey.sh  configure.ml  dune-project  dune-workspace  gw_version.txt  gwl.sh  gwtolatex.install  gwtolatex.opam  images  make-full.sh  make-simple.sh  run-test.sh  setup-test.sh  src
chausey.gwb/: base  base.acc  cache_visited  command.txt  fnames.inx  history  names.acc  names.inx  nb_persons~  notes  notes_links  patches  snames.inx  strings.inx  synchro_patches  synchro_patches~  tstab
chausey.gwb/history_d/: .0.
chausey.gwb/notes_d/: regates-chausey-1922.txt  regates-chausey-1937.txt  regates-chausey-1938.txt  regates-chausey-1979.txt
etc/tex/: arbre_3gen_v_photo-tex.txt  copyr.txt  dag1.txt  deslist.txt  (+3 more)
gw2l_env/: Gw2LaTeX-env.tex  Gw2LaTeX-tail.tex  append-annex.sh  base-test.gw  setup-test.sh  tags.txt
lib/: config.ml  dune  gwversion.ml  hutil.ml  lutil.ml  mkImgDict.ml  sutil.ml  treeAux.ml  trees.ml
livres/: test-annex.odt  test-complet.txt  test-copie-2.txt  test-mini.txt  test.txt
test/: chemin-jm-am.tex  dune  gwtolatex-test.html  gwtolatex-test0.html  gwtolatex-test0.txt  gwtolatex-test1.html  gwtolatex-test1.txt  gwtolatex-test10.html  gwtolatex-test2.html  gwtolatex-test2.txt  gwtolatex-test3.html  gwtolatex-test3.txt  gwtolatex-test4.txt  gwtolatex-test5.txt  gwtolatex-test6.txt  gwtolatex-test7.txt  gwtolatex-test8.txt  gwtolatex-test9.html  test.ml  test_gwtolatex.ml
tex/: anclist.txt  dag.txt  deslist.txt  perso-old2.txt  perso.txt
(+110 files in other folders)
